; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/serial/extr_stm32-usart.c_stm32_set_mctrl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/serial/extr_stm32-usart.c_stm32_set_mctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_port = type { i32 }
%struct.stm32_port = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.stm32_usart_offsets }
%struct.stm32_usart_offsets = type { i32 }

@TIOCM_RTS = common dso_local global i32 0, align 4
@UPSTAT_AUTORTS = common dso_local global i32 0, align 4
@USART_CR3_RTSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uart_port*, i32)* @stm32_set_mctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stm32_set_mctrl(%struct.uart_port* %0, i32 %1) #0 {
  %3 = alloca %struct.uart_port*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.stm32_port*, align 8
  %6 = alloca %struct.stm32_usart_offsets*, align 8
  store %struct.uart_port* %0, %struct.uart_port** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.uart_port*, %struct.uart_port** %3, align 8
  %8 = call %struct.stm32_port* @to_stm32_port(%struct.uart_port* %7)
  store %struct.stm32_port* %8, %struct.stm32_port** %5, align 8
  %9 = load %struct.stm32_port*, %struct.stm32_port** %5, align 8
  %10 = getelementptr inbounds %struct.stm32_port, %struct.stm32_port* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store %struct.stm32_usart_offsets* %12, %struct.stm32_usart_offsets** %6, align 8
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @TIOCM_RTS, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %31

17:                                               ; preds = %2
  %18 = load %struct.uart_port*, %struct.uart_port** %3, align 8
  %19 = getelementptr inbounds %struct.uart_port, %struct.uart_port* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @UPSTAT_AUTORTS, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %17
  %25 = load %struct.uart_port*, %struct.uart_port** %3, align 8
  %26 = load %struct.stm32_usart_offsets*, %struct.stm32_usart_offsets** %6, align 8
  %27 = getelementptr inbounds %struct.stm32_usart_offsets, %struct.stm32_usart_offsets* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @USART_CR3_RTSE, align 4
  %30 = call i32 @stm32_set_bits(%struct.uart_port* %25, i32 %28, i32 %29)
  br label %38

31:                                               ; preds = %17, %2
  %32 = load %struct.uart_port*, %struct.uart_port** %3, align 8
  %33 = load %struct.stm32_usart_offsets*, %struct.stm32_usart_offsets** %6, align 8
  %34 = getelementptr inbounds %struct.stm32_usart_offsets, %struct.stm32_usart_offsets* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @USART_CR3_RTSE, align 4
  %37 = call i32 @stm32_clr_bits(%struct.uart_port* %32, i32 %35, i32 %36)
  br label %38

38:                                               ; preds = %31, %24
  ret void
}

declare dso_local %struct.stm32_port* @to_stm32_port(%struct.uart_port*) #1

declare dso_local i32 @stm32_set_bits(%struct.uart_port*, i32, i32) #1

declare dso_local i32 @stm32_clr_bits(%struct.uart_port*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
